# gtk-desktop-test

./: .gitignore  Makefile  README.md  build.sh  layout.json  main.c  meson.build
docs/: gtk_project_spec.md  json_spec.md
src/: app.c  app.h  json_parser.c  json_parser.h  main.c  shape_renderer.c  shape_renderer.h  style_manager.c  style_manager.h  widget_factory.c  widget_factory.h
